--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.13.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "vercel": "^41.4.1"
+    "vercel": "^41.4.1",
+    "yamljs": "^0.3.0"
   }
 }
