--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "includeFiles": ["./swagger-output.json"],
+  "includeFiles": ["swagger-output.json"],
   "builds": [
     {
       "src": "api/index.js",
