--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "pg": "^8.13.3",
-    "vercel": "^41.4.1",
-    "yamljs": "^0.3.0"
+    "vercel": "^41.4.1"
   }
 }
